package com.forma.api.model;

public enum Role {
    REGULAR_USER,
    MODERATOR,
}
