@startuml Forma Entity Relationships

skinparam linetype ortho
skinparam entity {
    BackgroundColor #f5f6fa
    BorderColor #27187E
    FontColor #111827
    FontSize 13
}
skinparam enum {
    BackgroundColor #EEF0FF
    BorderColor #758BFD
    FontColor #27187E
}
skinparam note {
    BackgroundColor #f0f4e8
    BorderColor #7A9A35
    FontColor #374151
}
skinparam ArrowColor #27187E

enum Role {
    REGULAR_USER
    MODERATOR
}

entity User {
    * id : UUID <<PK>>
    --
    * username : String <<unique>>
    * passwordHash : String
    * role : Role <<FK>>
    * creationDate : Instant
}

entity Post {
    * id : UUID <<PK>>
    --
    * user_id : UUID <<FK>>
    * title : String(255)
    * body : String(255)
    --
    aiFlagged : boolean = false
    aiScore : double
    aiReasoning : TEXT
    flaggedMisleading : boolean = false
    updatedAt : Instant
}

entity PostLike {
    * id : UUID <<PK>>
    --
    * post_id : UUID <<FK>>
    * user_id : UUID <<FK>>
    * createdAt : Instant
}

entity Comment {
    * id : UUID <<PK>>
    --
    * post_id : UUID <<FK>>
    * user_id : UUID <<FK>>
    * body : String(500)
    * createdAt : Instant
}

User ||--o{ Post         : "authors"
User ||--o{ PostLike     : "likes"
User ||--o{ Comment      : "writes"
Post ||--o{ PostLike     : "receives"
Post ||--o{ Comment      : "receives"
User }o--|| Role         : "has"

note right of Post
    AI fields populated on every
    POST /api/posts by Claude.
    aiScore > 0.6 → aiFlagged = true.
    aiReasoning stored as TEXT
    (no length limit).
end note

note bottom of PostLike
    Unique constraint: (post_id, user_id).
    Self-likes rejected in service layer
    (user cannot like own post).
end note

@enduml
